.provarCaches/00D410000011HE0EAM/objects/rstkf__glaystmt__c.object
<CustomObject>
    <description>glaystmt__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>null</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT((rstkf__glaystmt_glacct__r.rstkf__glacct_acct__c &amp; &apos;-&apos; &amp; TEXT(rstkf__glaystmt_consolidationlevel__c)  &amp; &apos;-&apos; &amp; TEXT( rstkf__glaystmt_sourcetype__c ) &amp; &apos;-&apos; &amp; rstkf__glaystmt_curr__c), 80)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_consolidationlevel__c</fullName>
        <label>Consolidation Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Consolidation</fullName>
                </value>
                <value>
                    <fullName>Parent Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_curr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_currmatchesreportingcurr__c</fullName>
        <formula>rstkf__glaystmt_curr__c ==  rstkf__glaystmt_reportingcurr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>glaystmt_currmatchesreportingcurr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_dimnum__c</fullName>
        <label>Dimension Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_dimval__c</fullName>
        <label>Dimension Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_glay__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>glay</label>
        <referenceTo>rstkf__glay__c</referenceTo>
        <relationshipLabel>Permuted Version of GL Account Years</relationshipLabel>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_glaybud__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Year Budget</label>
        <referenceTo>rstkf__glaybud__c</referenceTo>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_glaydim__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>glaydim</label>
        <referenceTo>rstkf__glaydim__c</referenceTo>
        <relationshipLabel>Permuted Version of GL Account Years</relationshipLabel>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_glaydimdiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>glaydimdiv</label>
        <referenceTo>rstkf__glaydimdiv__c</referenceTo>
        <relationshipLabel>Permuted Version of GL Account Years</relationshipLabel>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_glaydimproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>glaydimproj</label>
        <referenceTo>rstkf__glaydimproj__c</referenceTo>
        <relationshipLabel>Permuted Version of GL Account Years</relationshipLabel>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_glaydiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>glaydiv</label>
        <referenceTo>rstkf__glaydiv__c</referenceTo>
        <relationshipLabel>Permuted Version of GL Account Years</relationshipLabel>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_glayproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>glayproj</label>
        <referenceTo>rstkf__glayproj__c</referenceTo>
        <relationshipLabel>Permuted Version of GL Account Years</relationshipLabel>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_glcmpdimset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial Dimension Set</description>
        <inlineHelpText>Financial Dimension Set</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__glcmpdimset__c</referenceTo>
        <relationshipLabel>Permuted Version of GL Account Years (Financial Dimension Set)</relationshipLabel>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_gldiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_glproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_glyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_net__c</fullName>
        <formula>(rstkf__glaystmt_p00dr__c + rstkf__glaystmt_p01dr__c + rstkf__glaystmt_p02dr__c + rstkf__glaystmt_p03dr__c + rstkf__glaystmt_p04dr__c + rstkf__glaystmt_p05dr__c + rstkf__glaystmt_p06dr__c + rstkf__glaystmt_p07dr__c + rstkf__glaystmt_p08dr__c + rstkf__glaystmt_p09dr__c + rstkf__glaystmt_p10dr__c + rstkf__glaystmt_p11dr__c + rstkf__glaystmt_p12dr__c + rstkf__glaystmt_p13dr__c) - (rstkf__glaystmt_p00cr__c + rstkf__glaystmt_p01cr__c + rstkf__glaystmt_p02cr__c + rstkf__glaystmt_p03cr__c + rstkf__glaystmt_p04cr__c + rstkf__glaystmt_p05cr__c + rstkf__glaystmt_p06cr__c + rstkf__glaystmt_p07cr__c + rstkf__glaystmt_p08cr__c + rstkf__glaystmt_p09cr__c + rstkf__glaystmt_p10cr__c + rstkf__glaystmt_p11cr__c + rstkf__glaystmt_p12cr__c + rstkf__glaystmt_p13cr__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postings - Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_p00cr__c</fullName>
        <label>Beginning Balance - Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_p00dr__c</fullName>
        <label>Beginning Balance - Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_p00net__c</fullName>
        <formula>rstkf__glaystmt_p00dr__c - rstkf__glaystmt_p00cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beginning Balance - Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_p01cr__c</fullName>
        <label>Period 1 Postings - Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_p01dr__c</fullName>
        <label>Period 1 Postings - Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_p01net__c</fullName>
        <formula>rstkf__glaystmt_p01dr__c  -  rstkf__glaystmt_p01cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period 1 Postings - Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_p02cr__c</fullName>
        <label>Period 2 Postings - Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_p02dr__c</fullName>
        <label>Period 2 Postings - Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_p02net__c</fullName>
        <formula>rstkf__glaystmt_p02dr__c  -  rstkf__glaystmt_p02cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period 2 Postings - Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_reportingcompany__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reporting Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipName>glaystmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_reportingcurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reporting  Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipName>glaystmts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_sourcetype__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GL Data</fullName>
                </value>
                <value>
                    <fullName>Statement Entry Data</fullName>
                </value>
                <value>
                    <fullName>Budget Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_subsidiary__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subsidiary</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipName>glaystmts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt_summarizedby__c</fullName>
        <label>Summarized By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Null</fullName>
                </value>
                <value>
                    <fullName>Account Only</fullName>
                </value>
                <value>
                    <fullName>Account + Division</fullName>
                </value>
                <value>
                    <fullName>Account + Division + Project</fullName>
                </value>
                <value>
                    <fullName>Account + Dimension</fullName>
                </value>
                <value>
                    <fullName>Account + Division + Dimension</fullName>
                </value>
                <value>
                    <fullName>Account + Division + Project + Dimension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Permuted Version of GL Account Year</label>
    <listViews>
        <fullName>rstkf__RS_Permuted_Version_of_GL_Account_Years</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__glaystmt_reportingcompany__c</columns>
        <columns>rstkf__glaystmt_glyear__c</columns>
        <columns>rstkf__glaystmt_glacct__c</columns>
        <columns>rstkf__glaystmt_sourcetype__c</columns>
        <columns>rstkf__glaystmt_glay__c</columns>
        <columns>rstkf__glaystmt_glaydiv__c</columns>
        <columns>rstkf__glaystmt_glayproj__c</columns>
        <columns>rstkf__glaystmt_glproj__c</columns>
        <columns>rstkf__glaystmt_p06net__c</columns>
        <columns>rstkf__glaystmt_summarizedby__c</columns>
        <columns>rstkf__glaystmt_consolidationlevel__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Permuted Version of GL Account Years</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Permuted_Version_of_GL_Account_YearsJSF</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__glaystmt_reportingcompany__c</columns>
        <columns>rstkf__glaystmt_glyear__c</columns>
        <columns>rstkf__glaystmt_glacct__c</columns>
        <columns>rstkf__glaystmt_sourcetype__c</columns>
        <columns>rstkf__glaystmt_summarizedby__c</columns>
        <columns>rstkf__glaystmt_consolidationlevel__c</columns>
        <columns>rstkf__glaystmt_p00net__c</columns>
        <columns>rstkf__glaystmt_reportingcurr__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glaystmt_subsidiary__c</field>
            <operation>contains</operation>
            <value>Company B</value>
        </filters>
        <filters>
            <field>rstkf__glaystmt_reportingcompany__c</field>
            <operation>contains</operation>
            <value>Company A,Company B</value>
        </filters>
        <filters>
            <field>rstkf__glaystmt_sourcetype__c</field>
            <operation>equals</operation>
            <value>Budget Data</value>
        </filters>
        <label>Permuted Version of GL Account Years JSF</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Permuted_Version_of_GL_Account_YearsJSF2</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glaystmt_reportingcompany__c</columns>
        <columns>rstkf__glaystmt_subsidiary__c</columns>
        <columns>rstkf__glaystmt_summarizedby__c</columns>
        <columns>rstkf__glaystmt_sourcetype__c</columns>
        <columns>rstkf__glaystmt_glacct__c</columns>
        <columns>rstkf__glaystmt_p01net__c</columns>
        <columns>rstkf__glaystmt_p02net__c</columns>
        <columns>rstkf__glaystmt_p03net__c</columns>
        <columns>rstkf__glaystmt_p04net__c</columns>
        <columns>rstkf__glaystmt_p05net__c</columns>
        <columns>rstkf__glaystmt_p06net__c</columns>
        <columns>rstkf__glaystmt_p07net__c</columns>
        <columns>rstkf__glaystmt_glyear__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glaystmt_reportingcompany__c</field>
            <operation>contains</operation>
            <value>Jon,Chandra</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Permuted Version of GL Account Years JSF</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permuted Version of GL Account Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>